Styles changes on tabs.

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -10,10 +10,35 @@ body {
   }
 
   .tabsContainer {
-    width: 98%;
     display: flex;
     align-items: center;
     justify-content: center;
+    flex-direction: column;
+    width: 99%;
+
+    %tabs-element {
+      margin: 0px 0px 8px 0px;
+    }
+
+    nav {
+      @extend %tabs-element;
+
+      width: 99%;
+
+      display: flex;
+      align-items: center;
+      justify-content: center;
+
+    }
+
+    main {
+      @extend %tabs-element;
+
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      flex-direction: column;
+    }
 
     .activeTab {
       background-color: lightgray;
