--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,5 @@
+@import './content-and-sidebar.scss';
+@import './tabs.scss';
 
 body {
   background-color: black;
@@ -11,53 +13,22 @@ body {
     width: 1100px;
     min-height: 600px;
     margin: auto;
+
+    @include tabFeature();
   }
 
-  .tabsContainer {
+  .logoDiv {
+    width: 150;
+    height: 150;
+    margin: 40px 0 40px 0;
+  }
+
+  .animationDiv {
+    width: 98%;
+    min-height: 150;
+    background-color: gray;
     display: flex;
-    align-items: center;
     justify-content: center;
-    flex-direction: column;
-    width: 99%;
-
-    %tabs-element {
-      margin: 0px 0px 8px 0px;
-    }
-
-    nav {
-      @extend %tabs-element;
-
-      width: 99%;
-
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      flex-wrap: wrap;
-
-      button {
-        background-color: dimgrey;
-        margin: 15px 0px 15px 0px;
-        padding: 8px 50px 8px 50px;
-        border: 0px solid darkgray;
-        border-radius: 0px;
-      }
-
-      .activeTab {
-        background-color: lightgray;
-        padding: 12px 50px 12px 50px;
-      }
-  
-      .inactiveTab {}
-
-    }
-
-    main {
-      @extend %tabs-element;
-
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      flex-direction: column;
-    }
+    align-items: center
   }
 }
