--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -18,8 +18,8 @@ body {
   }
 
   .logoDiv {
-    width: 150;
-    height: 150;
+    width: 150px;
+    height: 150px;
     margin: 40px 0 40px 0;
   }
 
