Tabssidebar and content now is 50-50 width wise.

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,5 +1,5 @@
-@import './content-and-sidebar.scss';
-@import './tabs.scss';
+@import './templates/content-and-sidebar.scss';
+@import './templates/tabs.scss';
 
 body {
   background-color: black;
