--- a/src/styles/templates/content-and-sidebar.scss
+++ b/src/styles/templates/content-and-sidebar.scss
@@ -11,9 +11,9 @@
       align-items: center;
       flex-direction: column;
       
-      width: 682px;
-      margin: 3px 7px 3px 3px;
-      background-color: MediumOrchid;
+      width: 49%;
+      margin: 3px 0px 3px 3px;
+      background-color: rgb(50, 50, 50);
     }
   
     .sidebar {
@@ -23,11 +23,11 @@
       justify-content: flex-start;
       align-content: center;
   
-      width: 255px;
+      width: 48%;
       margin: 3px 7px 3px 0px;
       padding: 5px 10px 5px 10px;
   
-      background-color: yellow;
+      background-color: rgb(70, 70, 70);
 
       %common-sidebar {
         width: 100%;
