--- a/src/styles/templates/tabs.scss
+++ b/src/styles/templates/tabs.scss
@@ -28,14 +28,22 @@
         padding: 8px 50px 8px 50px;
         border: 0px solid darkgray;
         border-radius: 0px;
+        &:hover {
+          background-color: rgb(90, 90, 90);
+        }
       }
 
       .activeTab {
         background-color: lightgray;
         padding: 12px 50px 12px 50px;
+        &:hover {
+          background-color: lightgray;
+        }
       }
 
-      .inactiveTab {}
+      .inactiveTab {
+        cursor: pointer;
+      }
 
     }
 
