Able to render a ThreeJS canvas.

--- a/src/styles/templates/tabs.scss
+++ b/src/styles/templates/tabs.scss
@@ -23,13 +23,13 @@
       flex-wrap: wrap;
 
       button {
-        background-color: dimgrey;
+        background-color: orange;
         margin: 15px 0px 15px 0px;
         padding: 8px 50px 8px 50px;
         border: 0px solid darkgray;
         border-radius: 0px;
         &:hover {
-          background-color: rgb(90, 90, 90);
+          background-color: rgb(150, 150, 150);
         }
       }
 
@@ -44,7 +44,6 @@
       .inactiveTab {
         cursor: pointer;
       }
-
     }
 
     main {
