--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -31,12 +31,20 @@ body {
     }
 
     .animationDiv {
-      width: 50%;
+      width: 500px;
       min-height: 400px;
+
       background-color: rgb(40, 40, 40);
+
       display: flex;
       justify-content: center;
-      align-items: center
+      align-items: center;
+
+      .mainAnimDiv {
+        background-color: green;
+        width: 100%;
+        height: 400px;
+      }
     }
 
     @include tabFeature();
