Fixed tabsContent now has unique keys.

--- a/src/styles/templates/content-and-sidebar.scss
+++ b/src/styles/templates/content-and-sidebar.scss
@@ -14,6 +14,12 @@
       width: 49%;
       margin: 3px 0px 3px 3px;
       background-color: rgb(40, 40, 40);
+
+      .glBlock {
+        background-color: rgb(40, 40, 40);
+        width: 100%;
+        height: 400px;
+      }
     }
   
     .sidebar {
