--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -41,7 +41,7 @@ body {
       align-items: center;
 
       .mainAnimDiv {
-        background-color: green;
+        background-color: rgb(40, 40, 40);
         width: 100%;
         height: 400px;
       }
