--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -31,10 +31,12 @@ body {
     }
 
     .animationDiv {
-      width: 500px;
-      min-height: 400px;
+      width: 250px;
+      min-height: 200px;
+      margin-top: 15px;
+      margin-bottom: 15px;
 
-      background-color: rgb(25, 25, 25);
+      background-color: rgb(40, 40, 40);
 
       display: flex;
       justify-content: center;
@@ -42,8 +44,8 @@ body {
 
       .mainAnimDiv {
         background-color: rgb(40, 40, 40);
-        width: 100%;
-        height: 400px;
+        width: 250px;
+        height: 200px;
       }
     }
 
