--- a/src/styles/templates/tabs.scss
+++ b/src/styles/templates/tabs.scss
@@ -23,7 +23,7 @@
       flex-wrap: wrap;
 
       button {
-        background-color: orange;
+        background-color: rgb(255, 100, 0);
         margin: 15px 0px 15px 0px;
         padding: 8px 50px 8px 50px;
         border: 0px solid darkgray;
