--- a/src/styles/templates/content-and-sidebar.scss
+++ b/src/styles/templates/content-and-sidebar.scss
@@ -20,6 +20,12 @@
         width: 100%;
         height: 400px;
       }
+
+      .glBlock2 {
+        background-color: rgb(25, 25, 25);
+        width: 100%;
+        height: 400px;
+      }
     }
   
     .sidebar {
